# tinify_cli

./: Cargo.toml  LICENSE  Readme.md
src/: main.rs  utils.rs
